--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\harij\Downloads\AdvSelenium4pm-6pm-20251206T031809Z-1-001\AdvSelenium4pm-6pm\testngBatch1.xml</span>
+                    <span>C:\Users\harij\git\repository7\AdvSelenium4pm-6pm\testngList.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -227,7 +227,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\harij\Downloads\AdvSelenium4pm-6pm-20251206T031809Z-1-001\AdvSelenium4pm-6pm\testngBatch1.xml</span>
+            <span class="header-content">C:\Users\harij\git\repository7\AdvSelenium4pm-6pm\testngList.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -301,28 +301,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createContactWithMandatoryDetails')
 data.setCell(0, 2, 'testNG.CreateContactTest')
-data.setCell(0, 3, 7273);
+data.setCell(0, 3, 6615);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createCampaignWithMandatoryDetails')
+data.setCell(1, 1, 'createCampaignWithStatus')
 data.setCell(1, 2, 'testNG.CreateCampaignTest')
-data.setCell(1, 3, 3827);
+data.setCell(1, 3, 5906);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'createProductWithMandatoryDetails')
 data.setCell(2, 2, 'testNG.CreateProductTest')
-data.setCell(2, 3, 3106);
+data.setCell(2, 3, 5272);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'createCampaignWithStatus')
+data.setCell(3, 1, 'createCampaignWithMandatoryDetails')
 data.setCell(3, 2, 'testNG.CreateCampaignTest')
-data.setCell(3, 3, 2964);
+data.setCell(3, 3, 4436);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'createCampaignWithExpectedCloseDate')
 data.setCell(4, 2, 'testNG.CreateCampaignTest')
-data.setCell(4, 3, 1780);
+data.setCell(4, 3, 3108);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -381,114 +381,114 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest</span>
-                <span class="method-start">40 ms</span>
+                <span class="method-start">67 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">83 ms</span>
+                <span class="method-start">126 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">9477 ms</span>
+                <span class="method-start">7722 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">createCampaignWithMandatoryDetails</span>
-                <span class="method-start">12200 ms</span>
+                <span class="method-start">11047 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">16379 ms</span>
+                <span class="method-start">15781 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">18207 ms</span>
+                <span class="method-start">18381 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">createCampaignWithStatus</span>
-                <span class="method-start">20119 ms</span>
+                <span class="method-start">21024 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">23316 ms</span>
+                <span class="method-start">27706 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">25572 ms</span>
+                <span class="method-start">30617 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">createCampaignWithExpectedCloseDate</span>
-                <span class="method-start">26801 ms</span>
+                <span class="method-start">33188 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">28790 ms</span>
+                <span class="method-start">36530 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">30550 ms</span>
+                <span class="method-start">39207 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testNG.CreateProductTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">31726 ms</span>
+                <span class="method-start">70350 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">34435 ms</span>
+                <span class="method-start">74694 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createProductWithMandatoryDetails</span>
-                <span class="method-start">36516 ms</span>
+                <span class="method-start">77668 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">39625 ms</span>
+                <span class="method-start">82956 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">41468 ms</span>
+                <span class="method-start">85157 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testNG.CreateContactTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">42277 ms</span>
+                <span class="method-start">106914 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">44683 ms</span>
+                <span class="method-start">111260 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createContactWithMandatoryDetails</span>
-                <span class="method-start">46643 ms</span>
+                <span class="method-start">113739 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">53917 ms</span>
+                <span class="method-start">120373 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">55734 ms</span>
+                <span class="method-start">122649 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testNG.CreateCampaignTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">56908 ms</span>
+                <span class="method-start">132988 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">56980 ms</span>
+                <span class="method-start">133095 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
