--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,26 +9,7 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">132,947</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">testNG.CreateCampaignTest</td><td><a href="#m0">createCampaignWithExpectedCloseDate</a></td><td rowspan="1">1766203124301</td><td rowspan="1">3108</td></tr><tr class="failedeven"><td><a href="#m1">createCampaignWithMandatoryDetails</a></td><td rowspan="1">1766203102160</td><td rowspan="1">4436</td></tr><tr class="failedeven"><td><a href="#m2">createCampaignWithStatus</a></td><td rowspan="1">1766203112137</td><td rowspan="1">5906</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testNG.CreateContactTest</td><td><a href="#m3">createContactWithMandatoryDetails</a></td><td rowspan="1">1766203204852</td><td rowspan="1">6615</td></tr><tr class="passedodd"><td rowspan="1">testNG.CreateProductTest</td><td><a href="#m4">createProductWithMandatoryDetails</a></td><td rowspan="1">1766203168781</td><td rowspan="1">5272</td></tr></tbody>
-</table>
-<h2>Test</h2><h3 id="m0">testNG.CreateCampaignTest#createCampaignWithExpectedCloseDate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Campaign Instagram Successfully Added] but found [Campaign is Not Added]
-	at testNG.CreateCampaignTest.createCampaignWithExpectedCloseDate(CreateCampaignTest.java:105)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testNG.CreateCampaignTest#createCampaignWithMandatoryDetails</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Campaign Instagram Successfully Added] but found [Campaign is Not Added]
-	at testNG.CreateCampaignTest.createCampaignWithMandatoryDetails(CreateCampaignTest.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testNG.CreateCampaignTest#createCampaignWithStatus</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Campaign Instagram Successfully Added] but found [Campaign is Not Added]
-	at testNG.CreateCampaignTest.createCampaignWithStatus(CreateCampaignTest.java:73)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testNG.CreateContactTest#createContactWithMandatoryDetails</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testNG.CreateProductTest#createProductWithMandatoryDetails</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody></table>
 </body>
 </html>
